<resources>
    <string name="app_name">Android-Architecture-Example</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="profile_image">Profile image</string>
    <string name="address">Address:</string>
    <string name="contact_information">Contact Information:</string>
    <string name="gender">Gender:</string>
    <string name="fullName">Name:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="state">State:</string>
    <string name="street">Street:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="timezone">Timezone:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="loading">Loading…</string>
    <string name="profile_image_description">Profile Image</string>
</resources>