<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android_architecture_example.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-154dp"
        tools:layout_editor_absoluteY="155dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_marginTop="16dp"
            app:imgUrl="@{viewModel.selectedUserFull.picture}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setVisibility="@{viewModel.uiIsVisible}"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/profile_image_description" />

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.userFullName}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/fullNameLabel"
            app:layout_constraintTop_toTopOf="@+id/fullNameLabel"
            tools:text="Mr.Alex Smith" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.gender}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/genderLabel"
            app:layout_constraintTop_toTopOf="@+id/genderLabel"
            tools:text="Male" />

        <TextView
            android:id="@+id/DateOfBirthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.dateOfBirth}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/DoBLabel"
            app:layout_constraintTop_toTopOf="@+id/DoBLabel"
            tools:text="September 1 1995" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DoBLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.location.state}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/stateLabel"
            app:layout_constraintTop_toTopOf="@+id/stateLabel"
            tools:text="Nordjylland" />

        <TextView
            android:id="@+id/streetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.location.street}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/streetLabel"
            app:layout_constraintTop_toTopOf="@+id/streetLabel"
            tools:text="9614, SÃ¸ndermarksvej" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.location.city}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/cityLabel"
            app:layout_constraintTop_toTopOf="@+id/cityLabel"
            tools:text="Kongsvinger" />

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.location.country}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/countryLabel"
            app:layout_constraintTop_toTopOf="@+id/countryLabel"
            tools:text="Denmark" />


        <TextView
            android:id="@+id/timeZoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.location.timezone}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/timezoneLabel"
            app:layout_constraintTop_toTopOf="@+id/timezoneLabel"
            tools:text=" -9:00" />

        <TextView
            android:id="@+id/contactInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/contact_information"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timezoneLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.email}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/textView18"
            tools:text="sara.andersen@example.com" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.selectedUserFull.phone}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="@+id/textView19"
            tools:text="92694011" />

        <TextView
            android:id="@+id/fullNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/fullName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/gender"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/DoBLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/date_of_birth"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderTextView"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/stateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/state"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/streetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/street"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/cityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/city"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streetLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/country"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/timezoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/timezone"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryLabel"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactInformation"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/phone"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:setVisibility="@{viewModel.uiIsVisible}" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setVisibility="@{viewModel.progressIsVisible}" />

        <TextView
            android:id="@+id/errorDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@{viewModel.errorText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setVisibility="@{viewModel.errorTextIsVisible}" />

        <TextView
            android:id="@+id/loadingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/loading"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:setVisibility="@{viewModel.progressIsVisible}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>